made next question, finish quiz and reset quiz button same length as questions button

--- a/src/index.css
+++ b/src/index.css
@@ -53,9 +53,12 @@ body {
   cursor: pointer;
 }
 .card-container > button {
-  display: block;
-  margin: 20px auto;
+  width: 100%;
+  padding: 16px;
+  border-radius: 10px;
+  margin: 20px 0;
 }
+
 
 button {
   margin: 20px;
