--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,9 @@ color: tomato;
   from { box-shadow: 0 0 10px gold; }
   to { box-shadow: 0 0 25px gold; }
 }
+.nice-try {
+  color: #ffb347; /* warm orange */
+  font-size: 18px;
+  margin-bottom: 10px;
+  text-align: center;
+}
